# TicTacToe

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
configured/: config.h.in
include/: tictactoe.h
src/: CMakeLists.txt  tictactoe.cpp
ut/: CMakeLists.txt  project-test.cpp
